fix(App.css): added z-index: 1 to navContainer

--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@
   margin-top: 0px;
   background-color: white;
   border-radius: 25px;
+  z-index: 1;
 }
 
 .sectionGH {
